@@ -1,3 +1,4 @@
+- Bug fix: CourseGroupDegreeInfoDataProvider should not read ExecutionYear by date
 - Refactor: RegistrationConclusionBean constructor cleanup
 
 6.26.0 (12-05-2022)
